# api

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
nginx/conf/: default.conf
src/: __init__.py
src/api/v1/: __init__.py
src/api/v1/auth/: auth.py
src/api/v1/health_check/: health_check.py
src/api/v1/spotify/: spotify.py
src/api/v1/tracks/: tracks.py
src/api/v1/users/: users.py
src/api/v1/yandex_music/: yandex_music.py
src/core/: celery.py  config.py  exceptions.py  lifespan.py  server.py  timezone.py
src/database/: database.py
src/migrations/: env.py
src/migrations/versions/: 73e448c3e1e7_init.py
src/models/: __init__.py  account_model.py  base_model.py  friend_model.py  spotify_account_model.py  subscription_model.py  track_model.py  user_model.py  vk_music_account_model.py  yandex_music_account_model.py
src/repositories/: account_repository.py  base_repository.py  spotify_account_repository.py  subscription_repository.py  track_repository.py  user_repository.py  vk_music_account_repository.py  yandex_music_account_repository.py
src/schemas/: account_schemas.py  spotify_schemas.py  subscription_schemas.py  token_schemas.py  track_schemas.py  user_schemas.py  yandex_schemas.py
src/services/: account_service.py  music_service.py  spotify_service.py  subscription_service.py  track_business_service.py  track_service.py  track_update_service.py  user_service.py
src/services/music_services/: spotify_service.py  yandex_music_service.py
src/tasks/: __init__.py  test.py  token_update.py  track_updates.py
src/utils/: jwt.py  security.py
