[tool.poetry]
name = "wolns-api"
version = "0.1.0"
description = ""
authors = ["Egor Fadeev <fad.egor05@gmail.com>", "Aleksandr Pervushin <riddlealexandr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = "^0.115.6"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.1"
sqlmodel = "^0.0.22"
pyjwt = "^2.10.1"
pytz = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# match black
line-length = 120
target-version = "py312"
select = [
    "ALL", # include all the rules, including new ones
]
ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ", # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100", # ignore missing docs
    "FIX002", # too verbose descriptions of todos
    "E501", # line too long
    "TRY003", # external messages in exceptions are too verbose

    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "TD002",
    "TD003",
    "B008"
]